h1. CHANGELOG

h2. 2.4.20 January 9, 2014

* use 'rails_layout' gem to generate Devise views with CSS styling for Foundation or Bootstrap
* change commands to use 'rails_layout' gem version 1.0.0

h2. 2.4.19 January 5, 2014

* add 'rails-devise' example application
* add 'rails-foundation' example application

h2. 2.4.18 December 28, 2013

* fix for mongoid gem
* added 'createdb' flag to user creation for PostgreSQL (contributed by Tristan Lohman)
* update Mandrill API key to match Heroku style (contributed by Stephan Meyers)
* add 'unicorn-rails' gem (suggested by rceee)

h2. 2.4.17 December 15, 2013

* allow choice of front-end framework when building 'learn-rails' example
* use 'slim-rails' gem
* remove temporary Haml gems from Gemfile when Slim is selected

h2. 2.4.16 December 11, 2013

* update 'rails-bootstrap' example application to use Bootstrap 3.0

h2. 2.4.15 December 8, 2013

* use Zurb Foundation 4 for 'learn-rails' example application
* gem 'compass-rails' 2.0.alpha.0 was yanked, use version 1.1.2

h2. 2.4.14 November 22, 2013

* support Zurb Foundation 5

h2. 2.4.13 November 14, 2013

* use the 'rails_layout' gem to generate navigation links
* remove .gitignore and .gitkeep files unless git recipe is chosen (contributed by Mike Połtyn)
* option to load defaults via HTTP instead of file (contributed by Arnaud Sellenet)
* don't copy the user model from the rails3-mongoid-devise repo (contributed by Arnaud Sellenet)

h2. 2.4.12 November 2, 2013

* use the 'rails_layout' gem to set up a front-end framework
* drop option to use LESS with Twitter Bootstrap (offer Sass version only)
* 'learn-rails' app uses Zurb Foundation 4.0 instead of Twitter Bootstrap 2.3
* upgrade 'simple_form' gem to '3.0.0'
* remove 'bundle_path' preference used with 'bundle install' (https://github.com/RailsApps/rails-composer/issues/138)

h2. 2.4.11 September 19, 2013

* use rails_layout gem to set up layout files for Twitter Bootstrap 2.3

h2. 2.4.10 September 16, 2013
