@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.4.20"
+  VERSION = "2.4.21"
 end
