@@ -1,5 +1,10 @@
 h1. CHANGELOG
 
+h2. 2.4.21 January 11, 2014
+
+* add 'rails-devise' example application to 'apps4' recipe
+* remove custom 'name' field from 'rails-devise' example application
+
 h2. 2.4.20 January 9, 2014
 
 * use 'rails_layout' gem to generate Devise views with CSS styling for Foundation or Bootstrap
